# birdnetValidator

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONFIG.yaml.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: docker.yml
assets/: birdnet_multilingual.csv
birdnet_validator/: __init__.py  __main__.py
manuscript/: draft.md
r-package/: DESCRIPTION  NAMESPACE
r-package/R/: run_validator.R
sampling_scripts/: generate_test_db.py  merged_partitioned.py  sampling_core.py  sampling_diagnostics.py  sampling_s3.py  sampling_utils.py  subsample_annotations.py
src/: config.py  dashboard.py  data_processor.py  gbif_utils.py  overview.py  s3_utils.py  selection_handlers.py  session_manager.py  ui_components.py  utils.py  validation_handlers.py
src/database/: queries.py
src/handlers/: selection_handlers.py  validation_handlers.py
src/local/: data_processor.py  selection_handlers.py  session_manager.py  ui_components.py  validation_handlers.py
src/session/: session_manager.py
src/ui/: ui_components.py  ui_utils.py
