[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "deptry"
]

[project]
authors = [
  {name = "benjamin cretois", email = "benjamin.cretois@nina.no"}
]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
  "boto3>=1.28.0",
  "librosa>=0.11.0",
  "matplotlib>=3.7.0",
  "pandas>=2.0.0",
  "python-dotenv>=1.0.0",
  "streamlit>=1.52.2",
  "streamlit-searchbox>=0.1.20",
]
description = "Streamlit app for validating BirdNET / PERCH species detections."
license = "GPL-3.0+"
name = "birdnet-validator"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.scripts]
birdnet-validator = "birdnet_validator.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["birdnet_validator"]

[tool.hatch.build.targets.wheel.force-include]
"src" = "src"
"assets/birdnet_multilingual.csv" = "assets/birdnet_multilingual.csv"
"assets/logo.png" = "assets/logo.png"


[tool.deptry]
ignore = ["DEP001", "DEP002"]
known_first_party = ["config", "utils", "s3_utils", "data_processor", "selection_handlers", "session_manager", "ui_components", "validation_handlers"]

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = ["COM812", "S608", "S311"]
select = ["E", "W", "I", "F", "UP", "S", "B", "A", "COM", "LOG", "PTH", "Q"]
